# ai_finance_predictor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: README.md
config/: frozen_params.toml
frontend/: README.md
quantlab/: __init__.py  config.py
quantlab/evaluation/: __init__.py  harness.py
quantlab/labeling/: __init__.py  labeling.py
quantlab/lockbox/: __init__.py  lockbox.py
quantlab/metrics/: __init__.py  metrics.py
quantlab/storage/: __init__.py  duckdb_conn.py
quantlab/validation/: __init__.py  walk_forward.py
tests/: conftest.py
tests/fixtures/evaluation/: harness_cases.json
tests/fixtures/labeling/: labels.json
tests/fixtures/lockbox/: partitions.json
tests/fixtures/walk_forward/: folds.json
tests/unit/: test_config.py  test_harness.py  test_labeling.py  test_lockbox.py  test_metrics.py  test_smoke.py  test_walk_forward.py  test_walk_forward_edge.py  test_walk_forward_fixtures.py
