[project]
name = "quant-platform"
version = "0.1.0"
description = "Plataforma financiera con subsistema de investigación QuantLab — Fase 1"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quantlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
